Update plugin-dependencies